# dpw-layer-template

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  invoke.py  main.py  models.py
contracts/: layer_01_awareness.yaml  layer_02_application.yaml  layer_03_case_initiation.yaml  layer_04_exception_handling.yaml  layer_05_verification.yaml  layer_06_external_validation.yaml  layer_07_document_upload.yaml  layer_08_notice_rfi.yaml  layer_09_eligibility_enrollment.yaml  layer_10_benefit_distribution.yaml  layer_11_appeals.yaml
docs/: local_dev.md  registration_guide.md
tests/: test_compliance.py  test_invoke.py
